<resources>
    <string name="server_token">588f08fd-d56b-4149-9c54-926677ec98d9</string>
    <string name="app_name">Трекер привычек</string>
    <string name="habit_creating_title">Создание привычки</string>
    <string name="habit_editing_title">Редактирование привычки</string>
    <string name="name_field_title">Название</string>
    <string name="description_field_title">Описание</string>
    <string name="priority_field_title">Приоритет</string>
    <string name="type_field_title">Тип</string>
    <string name="good_habit_button_title">Полезная привычка</string>
    <string name="bad_habit_button_title">Вредная привычка</string>
    <string name="periodicity_field_title">Периодичность</string>
    <string name="periodicity_field_title_first_part">раз в</string>
    <string name="periodicity_field_title_second_part">дней</string>
    <string name="color_field_title">Цвет</string>
    <string-array name="habit_priority">
        <item>Высокий</item>
        <item>Средний</item>
        <item>Низкий</item>
    </string-array>
    <plurals name="periodicity_times">
        <item quantity="one">%d раз</item>
        <item quantity="few">%d раза</item>
        <item quantity="other">%d раз</item>
    </plurals>
    <plurals name="periodicity_days">
        <item quantity="one">%d день</item>
        <item quantity="few">%d дня</item>
        <item quantity="other">%d дней</item>
    </plurals>
    <string name="periodicity">Выполнять %1$s в %2$s</string>
    <string name="completions_count">%1$s/%2$s</string>

    <string name="about_app">С помощью этого приложения вы можете отследить свой прогресс в формировании полезных привычек и избавлении от вредных.</string>
    <string name="main_page_menu_item">Главная страница</string>
    <string name="about_app_menu_item">О приложении</string>
    <string name="good_habits_tab_title">Полезные</string>
    <string name="bad_habits_tab_title">Вредные</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="reset_all_filters">Сбросить все фильтры</string>
    <string name="should_enter">*нужно заполнить</string>
    <string name="value_should_be_more_than_zero">*значение должно быть больше 0</string>
    <string name="sort_by_priority_field_title">Сортировать по приоритету</string>
    <string name="sort_by_name_field_title">Сортировать по названию</string>
    <string name="sort_by_changing_date_field_title">Сортировать по дате изменения</string>
    <string name="search_by_name_field">Поиск по названию…</string>
    <string name="filter_and_sorting_bottom_sheet_title">Фильтр и сортировка</string>
    <string name="edit_menu_item">Изменить</string>
    <string name="delete_menu_item">Удалить</string>
</resources>