<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HabitCreatingOrEditingFragment">


    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_field_title"
        app:layout_constraintBottom_toTopOf="@+id/name_field_editing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title" />

    <EditText
        android:id="@+id/name_field_editing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/description_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_field" />

    <TextView
        android:id="@+id/description_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_field_title"
        app:layout_constraintBottom_toTopOf="@+id/description_field_editing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_field_editing" />

    <EditText
        android:id="@+id/description_field_editing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/priority_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_field" />

    <TextView
        android:id="@+id/priority_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_field_title"
        app:layout_constraintBottom_toTopOf="@+id/priority_field_editing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_field_editing" />

    <Spinner
        android:id="@+id/priority_field_editing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/habit_priority"
        app:layout_constraintBottom_toTopOf="@+id/type_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_field" />

    <TextView
        android:id="@+id/type_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_field_title"
        app:layout_constraintBottom_toTopOf="@+id/type_field_editing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_field_editing" />

    <RadioGroup
        android:id="@+id/type_field_editing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/periodicity_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_field">

        <RadioButton
            android:id="@+id/good_habit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/good_habit_button_title" />

        <RadioButton
            android:id="@+id/bad_habit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad_habit_button_title" />
    </RadioGroup>

    <TextView
        android:id="@+id/periodicity_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodicity_field_title"
        app:layout_constraintBottom_toTopOf="@+id/times_field_editing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_field_editing" />

    <TextView
        android:id="@+id/periodicity_field_first_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodicity_field_title_first_part"
        app:layout_constraintBottom_toTopOf="@+id/days_field_editing"
        app:layout_constraintLeft_toRightOf="@+id/times_field_editing"
        app:layout_constraintTop_toBottomOf="@+id/periodicity_field" />

    <TextView
        android:id="@+id/periodicity_field_second_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodicity_field_title_second_part"
        app:layout_constraintBottom_toTopOf="@+id/color_field"
        app:layout_constraintLeft_toRightOf="@id/days_field_editing"
        app:layout_constraintTop_toBottomOf="@+id/periodicity_field_first_part" />

    <EditText
        android:id="@+id/times_field_editing"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:maxLength="3"
        app:layout_constraintBottom_toTopOf="@+id/days_field_editing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodicity_field" />

    <EditText
        android:id="@+id/days_field_editing"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:maxLength="3"
        app:layout_constraintBottom_toTopOf="@+id/color_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/times_field_editing" />

    <TextView
        android:id="@+id/color_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/color_field_title"
        app:layout_constraintBottom_toTopOf="@id/page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/days_field_editing" />

    <ImageView
        android:id="@+id/current_color_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:src="#ff0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/days_field_editing" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/current_color_icon">

        <LinearLayout
            android:id="@+id/colors_scroll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>