<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_200">

    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/filter_and_sorting_bottom_sheet_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/find_by_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sort_by_priority_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/sort_by_priority_field_title"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_by_name_field"
        app:layout_constraintTop_toBottomOf="@+id/find_by_name" />

    <TextView
        android:id="@+id/sort_by_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sort_by_name_field_title"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_by_date_field"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_priority_field" />

    <TextView
        android:id="@+id/sort_by_date_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sort_by_changing_date_field_title"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_name_field" />

    <EditText
        android:id="@+id/find_by_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/search_by_name_field"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_by_priority_field"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title" />

    <RadioGroup
        android:id="@+id/sort_by_priority_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/sort_by_priority_field"
        app:layout_constraintTop_toBottomOf="@id/find_by_name">

        <RadioButton
            android:id="@+id/sort_by_priority_from_low_to_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sorting_selector"
            android:button="@drawable/ic_baseline_sort_a_z_24"
            android:scaleX="0.65"
            android:scaleY="0.65" />

        <RadioButton
            android:id="@+id/sort_by_priority_from_high_to_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sorting_selector"
            android:button="@drawable/ic_baseline_sort_z_a_24"
            android:scaleX="0.65"
            android:scaleY="0.65" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/sort_by_name_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/sort_by_name_field"

        app:layout_constraintTop_toBottomOf="@id/sort_by_priority_buttons">

        <RadioButton
            android:id="@+id/sort_by_name_from_low_to_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sorting_selector"
            android:button="@drawable/ic_baseline_sort_a_z_24"
            android:scaleX="0.65"
            android:scaleY="0.65" />

        <RadioButton
            android:id="@+id/sort_by_name_from_high_to_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sorting_selector"
            android:button="@drawable/ic_baseline_sort_z_a_24"
            android:scaleX="0.65"
            android:scaleY="0.65" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/sort_by_date_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/sort_by_date_field"

        app:layout_constraintTop_toBottomOf="@id/sort_by_name_buttons">

        <RadioButton
            android:id="@+id/sort_by_date_from_low_to_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sorting_selector"
            android:button="@drawable/ic_baseline_sort_a_z_24"
            android:scaleX="0.65"
            android:scaleY="0.65" />

        <RadioButton
            android:id="@+id/sort_by_date_from_high_to_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sorting_selector"
            android:button="@drawable/ic_baseline_sort_z_a_24"
            android:scaleX="0.65"
            android:scaleY="0.65" />

    </RadioGroup>

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/sort_by_date_field"
        app:layout_goneMarginTop="30dp">

        <LinearLayout
            android:id="@+id/colors_scroll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/reset_all_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/reset_all_filters"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/scroll" />


</androidx.constraintlayout.widget.ConstraintLayout>